[project]
name = "comfyui-event-handler"
description = "Javascript code will run when an event fires."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-event-handler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-event-handler"
Icon = ""
